--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
@@ -208,6 +208,7 @@
     </Content>
     <Content Include="Image\Banner_Pic\heart2.png" />
     <Content Include="Image\Banner_Pic\index_banner.jpg" />
+    <Content Include="Image\Banner_Pic\topic.jpg" />
     <Content Include="Image\Logo_Icon\avatar-50.png" />
     <Content Include="Image\Logo_Icon\comment-50.png" />
     <Content Include="Image\Logo_Icon\home-50.png" />
@@ -300,6 +301,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Index\Index.cshtml" />
+    <Content Include="Views\Index\ListCategories.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -331,9 +333,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>2204</DevelopmentServerPort>
+          <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:2204/</IISUrl>
+          <IISUrl>http://localhost:5672/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
