--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
@@ -215,6 +215,7 @@
     <Content Include="Image\Banner_Pic\User\topic_info.jpg" />
     <Content Include="Image\Logo_Icon\avatar-50.png" />
     <Content Include="Image\Logo_Icon\comment-50.png" />
+    <Content Include="Image\Logo_Icon\edit-48.png" />
     <Content Include="Image\Logo_Icon\home-50.png" />
     <Content Include="Image\Logo_Icon\red_cross.png" />
     <Content Include="Models\Model1.Context.tt">
