--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
@@ -468,10 +468,9 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\Posts\Create.cshtml" />
-    <Content Include="Views\Posts\Delete.cshtml" />
-    <Content Include="Views\Posts\Details.cshtml" />
-    <Content Include="Views\Posts\Edit.cshtml" />
+    <Content Include="Views\Posts\_PartialCreate.cshtml" />
+    <Content Include="Views\Posts\_PartialEdit.cshtml" />
+    <Content Include="Views\Posts\_PartialDelete.cshtml" />
     <Content Include="Views\Posts\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
