--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
@@ -152,6 +152,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminIndexController.cs" />
+    <Compile Include="Controllers\AdminTopicManagerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IndexController.cs" />
     <Compile Include="Global.asax.cs">
@@ -190,9 +192,12 @@
     <Compile Include="Models\Topic.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\TopicInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\assets\AdminIndex.css" />
+    <Content Include="Content\assets\AdminManager.css" />
     <Content Include="Content\assets\style.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -207,12 +212,18 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Image\Banner_Pic\Admin\adminIndex_banner.jpg" />
     <Content Include="Image\Banner_Pic\heart2.png" />
     <Content Include="Image\Banner_Pic\User\group.jpg" />
     <Content Include="Image\Banner_Pic\User\index_banner.jpg" />
     <Content Include="Image\Banner_Pic\User\separate.jpg" />
     <Content Include="Image\Banner_Pic\User\topic.jpg" />
     <Content Include="Image\Banner_Pic\User\topic_info.jpg" />
+    <Content Include="Image\Logo_Icon\Admin\Acc_icon-80.png" />
+    <Content Include="Image\Logo_Icon\Admin\category-icon-50.png" />
+    <Content Include="Image\Logo_Icon\Admin\Cross-icon-50.png" />
+    <Content Include="Image\Logo_Icon\Admin\new-topic-50.png" />
+    <Content Include="Image\Logo_Icon\Admin\Post-icon-50.png" />
     <Content Include="Image\Logo_Icon\avatar-50.png" />
     <Content Include="Image\Logo_Icon\comment-50.png" />
     <Content Include="Image\Logo_Icon\edit-48.png" />
@@ -273,6 +284,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\MyScript\indexFunction.js" />
+    <Content Include="Scripts\MyScript\login.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
@@ -311,6 +323,13 @@
     <Content Include="Views\Index\TopicDetail.cshtml" />
     <Content Include="Views\Index\CategoryDropDown.cshtml" />
     <Content Include="Views\Index\ListGroup.cshtml" />
+    <Content Include="Views\AdminIndex\Index.cshtml" />
+    <Content Include="Views\AdminIndex\ListAccount.cshtml" />
+    <Content Include="Views\AdminIndex\ListGroup.cshtml" />
+    <Content Include="Views\AdminIndex\ListCat.cshtml" />
+    <Content Include="Views\AdminIndex\ListTopic.cshtml" />
+    <Content Include="Views\AdminIndex\ListPost.cshtml" />
+    <Content Include="Views\AdminTopicManager\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
