--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
@@ -1258,6 +1258,7 @@
     <Content Include="Image\Logo_Icon\comment-50.png" />
     <Content Include="Image\Logo_Icon\home-50.png" />
     <Content Include="Image\Logo_Icon\red_cross.png" />
+    <Content Include="Image\Topic\82f78c3277e147ad9f75a62398d2e890.jpg" />
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model1.Context.cs</LastGenOutput>
@@ -1374,7 +1375,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Image\Topic\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
