--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Dr4rum_eProjectIII.csproj
@@ -156,7 +156,6 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserAccountController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
     <Compile Include="Controllers\AdminIndexController.cs" />
@@ -1263,10 +1262,14 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Image\avt\avatar-icon-D-Incognito.png" />
+    <Content Include="Image\avt\avatar-icon-filled.png" />
+    <Content Include="Image\avt\avatar-icon-U-Incognito.png" />
     <Content Include="Image\Banner_Pic\Admin\adminIndex_banner.jpg" />
     <Content Include="Image\Banner_Pic\heart2.png" />
     <Content Include="Image\Banner_Pic\User\group.jpg" />
     <Content Include="Image\Banner_Pic\User\index_banner.jpg" />
+    <Content Include="Image\Banner_Pic\User\register_banner.jpg" />
     <Content Include="Image\Banner_Pic\User\separate.jpg" />
     <Content Include="Image\Banner_Pic\User\topic.jpg" />
     <Content Include="Image\Banner_Pic\User\topic_info.jpg" />
@@ -1357,7 +1360,6 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\myScript.js" />
     <Content Include="Scripts\MyScript\indexFunction.js" />
-    <Content Include="Scripts\MyScript\login.js" />
     <Content Include="Scripts\MyJQuery.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
@@ -1421,6 +1423,7 @@
     <Content Include="Views\UserAccount\ChangePassword.cshtml" />
     <Content Include="Views\UserAccount\ForgetPasswordAddNewPass.cshtml" />
     <Content Include="Views\UserAccount\ForgetPassword.cshtml" />
+    <Content Include="Views\Index\viewOtherDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
