--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Web.config
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation debug="false" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
@@ -50,11 +50,19 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".otf" mimeType="application/x-font-otf" />
+      <mimeMap fileExtension=".ttf" mimeType="application/x-font-ttf" />
+    </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <!--<modules runAllManagedModulesForAllRequests="true">
+      <remove name="BundleModule" />
+      <add name="BundleModule" type="System.Web.Optimization.BundleModule" />
+    </modules>-->
   </system.webServer>
   <system.codedom>
     <compilers>
@@ -66,7 +74,7 @@
     <add name="Dr4rumEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Dr4rum;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Dr4rumEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-1907U9N\SQLEXPRESS;initial catalog=Dr4rum;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Dr4rumEntities3" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Dr4rum;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DbDocEntities" connectionString="metadata=res://*/Models.ModelIndex.csdl|res://*/Models.ModelIndex.ssdl|res://*/Models.ModelIndex.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DbDoc;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DbDocEntities" connectionString="metadata=res://*/Models.ModelIndex.csdl|res://*/Models.ModelIndex.ssdl|res://*/Models.ModelIndex.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dr4rum.database.windows.net;initial catalog=Dr4rum;persist security info=True;user id=quantrivien001;password=Admin001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
